--- a/codes/style.css
+++ b/codes/style.css
@@ -122,7 +122,7 @@ body {
           flex-direction: column;
   width: 100%;
   padding: 50px 0;
-  background: #F6F6F6;
+  background: #f6f6f6;
 }
 
 .blocs-intro .title-intro {
@@ -157,6 +157,9 @@ body {
   font-size: 12px;
   margin: 0;
   padding: 0;
+  box-shadow: 0px 5px 36px -7px rgba(0, 0, 0, 0.41);
+  -webkit-box-shadow: 0px 5px 36px -7px rgba(0, 0, 0, 0.41);
+  -moz-box-shadow: 0px 5px 36px -7px rgba(0, 0, 0, 0.41);
 }
 
 .blocs-intro .btn-intro p {
@@ -165,6 +168,16 @@ body {
   list-style: none;
   border-radius: 200px;
   color: white;
+}
+
+.btn-intro:hover {
+  box-shadow: 0px 0px 4px 4px #e17bdc88;
+  -webkit-box-shadow: 0px 0px 4px 4px #e17bdc88;
+  -moz-box-shadow: 0px 0px 4px 4px #e17bdc88;
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
 }
 
 /******process******/
@@ -204,7 +217,7 @@ section.process h2 {
       -ms-flex-align: center;
           align-items: center;
   margin: 10px 20px;
-  background: #F6F6F6;
+  background: #f6f6f6;
   height: 75px;
   width: 85%;
   border-radius: 12px;
@@ -213,7 +226,7 @@ section.process h2 {
 }
 
 .process-bloc-resto .btn {
-  background: #9356DC;
+  background: #9356dc;
   padding: 5px 10px;
   border-radius: 50px;
   margin-left: -12px;
@@ -236,18 +249,31 @@ section.process h2 {
   margin-left: 10px;
 }
 
+.process-bloc-resto:hover {
+  background: #f5edff;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  -webkit-transition: 0.31s;
+  transition: 0.31s;
+  color: #9356dc;
+  box-shadow: 0px 0px 3px 2px #9256dc4b;
+  -webkit-box-shadow: 0px 0px 3px 2px #9256dc4b;
+  -moz-box-shadow: 0px 0px 3px 2px #9256dc4b;
+}
+
+.process-bloc-resto:hover .btn_text {
+  color: black;
+}
+
 /****restaurants****/
 .restaurants {
-  background: #F6F6F6;
+  background: #f6f6f6;
   margin-top: 50px;
   width: 100%;
-  margin-bottom: 50px;
 }
 
 .restaurants h2 {
   margin-left: 20px;
-  padding-top: 50px;
-  margin-bottom: 50px;
 }
 
 .bloc-restaurant {
@@ -258,6 +284,7 @@ section.process h2 {
   grid-gap: 20px;
   width: 100%;
   justify-items: center;
+  height: 100%;
 }
 
 .bloc-restaurants.a {
@@ -266,7 +293,7 @@ section.process h2 {
 
 .items {
   width: 90%;
-  height: 250px;
+  height: 90%;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr;
@@ -277,6 +304,16 @@ section.process h2 {
   margin: 0;
   -webkit-box-shadow: 0px 2px 19px 0px rgba(194, 188, 188, 0.92);
           box-shadow: 0px 2px 19px 0px rgba(194, 188, 188, 0.92);
+}
+
+.items:hover {
+  -webkit-transform: scale(1.02);
+          transform: scale(1.02);
+  -webkit-transition: 0.22s;
+  transition: 0.22s;
+  box-shadow: 0px 0px 3px 3px #e17bdc88;
+  -webkit-box-shadow: 0px 0px 3px 3px #e17bdc88;
+  -moz-box-shadow: 0px 0px 3px 3px #e17bdc88;
 }
 
 .card-new {
@@ -304,7 +341,7 @@ section.process h2 {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  background: #99E2D0;
+  background: #99e2d0;
   height: 28px;
   width: 85px;
   border-radius: 3px;
@@ -323,7 +360,7 @@ section.process h2 {
   -ms-grid-row: 4;
   grid-row: 4;
   background: white;
-  border-radius: 0 0 15px 15px;
+  border-radius: 0 0 25px 25px;
   padding: 0 20px;
 }
 
@@ -430,7 +467,10 @@ footer h3 {
   margin: 0 0 30px 10px;
 }
 
-.footer-list .footer_1, .footer-list .footer_2, .footer-list .footer_3, .footer-list .footer_4 {
+.footer-list .footer_1,
+.footer-list .footer_2,
+.footer-list .footer_3,
+.footer-list .footer_4 {
   width: 100%;
   margin: 0 10px 10px 10px;
 }
@@ -451,7 +491,8 @@ footer h3 {
   margin: 0 10px 0 10px;
 }
 
-.mentions, .contact {
+.mentions,
+.contact {
   color: white;
   margin: 0 0 0 10px;
   width: 100%;
@@ -475,7 +516,7 @@ footer h3 {
 }
 
 .R-header .head-logo-D {
-  font-family: "Shrikhand",cursive;
+  font-family: "Shrikhand", cursive;
   margin: 8px 0;
 }
 
@@ -483,11 +524,12 @@ footer h3 {
   width: 100%;
   display: -ms-grid;
   display: grid;
+  height: 60%;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-  -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  background: #F6F6F6;
+  -ms-grid-rows: 1fr 1fr 1fr 1fr 0.5fr;
+      grid-template-rows: 1fr 1fr 1fr 1fr 0.5fr;
+  background: #f6f6f6;
 }
 
 .card-img-text {
@@ -495,8 +537,8 @@ footer h3 {
   display: grid;
   -ms-grid-columns: 1fr;
       grid-template-columns: 1fr;
-  -ms-grid-rows: 0.75fr 1fr 1fr  0.75fr;
-      grid-template-rows: 0.75fr 1fr 1fr  0.75fr;
+  -ms-grid-rows: 0.75fr 1fr 1fr 0.75fr;
+      grid-template-rows: 0.75fr 1fr 1fr 0.75fr;
   background: url(/src/img-resto/LaPaletteDuGout.jpg) center;
   background-size: cover;
   width: 100%;
@@ -512,10 +554,10 @@ footer h3 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-family: "Shrikhand",cursive;
+  font-family: "Shrikhand", cursive;
   -ms-grid-row: 4;
   grid-row: 4;
-  background: #F6F6F6;
+  background: #f6f6f6;
   font-size: 16px;
   letter-spacing: 1px;
   border-radius: 35px 35px 0 0;
@@ -526,7 +568,8 @@ footer h3 {
   margin: 25px 0;
 }
 
-.card-text-case .far, .card-text-case .fas {
+.card-text-case .far,
+.card-text-case .fas {
   font-size: 27px;
 }
 
@@ -588,6 +631,45 @@ footer h3 {
   margin: 0 0 5px 10px;
 }
 
+.items-menu {
+  width: 80%;
+}
+
+.check-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 30px;
+  background: #99E2D0;
+  padding: 25px 25px 25px 25px;
+  border-radius: 0 15px 15px 0;
+  display: none;
+  -webkit-animation: 1s linear 0.1s icon;
+          animation: 1s linear 0.1s icon;
+}
+
+@-webkit-keyframes opacité {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes opacité {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.check-icon:hover {
+  display: inline-block;
+}
+
 .btn-text-case {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -595,23 +677,33 @@ footer h3 {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   background: white;
   border-radius: 15px 15px;
   padding: 0 20px;
   -webkit-box-shadow: 0px 10px 12px 5px rgba(220, 218, 218, 0.75);
           box-shadow: 0px 10px 12px 5px rgba(220, 218, 218, 0.75);
+  width: 100%;
+  padding: 0 0 0 20px;
+  height: 100%;
+  border-radius: 15px;
 }
 
-.btn-text-case .name-menu > h3, .btn-text-case p {
+.btn-text-case .fa-check-circle {
+  color: white;
+}
+
+.btn-text-case .name-menu > h3,
+.btn-text-case p {
   margin: 5px 0;
   font-size: 10px;
 }
 
 .btn-text-case .price-menu {
   margin-bottom: 5px;
+  margin-right: 20px;
   font-weight: 700;
 }
 
@@ -626,17 +718,19 @@ footer h3 {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  max-height: 200px;
 }
 
 .btn-search {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  padding-left: 20px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   background: white;
-  width: 220px;
+  width: 100%;
   border-radius: 50px;
   -webkit-box-shadow: 0px 10px 12px 5px rgba(220, 218, 218, 0.75);
           box-shadow: 0px 10px 12px 5px rgba(220, 218, 218, 0.75);
@@ -661,5 +755,115 @@ footer h3 {
 #sens {
   background: url(/src/img-resto/LeDeliceDesSens.jpg) center;
   background-size: cover;
+}
+
+#section1 {
+  -webkit-animation-name: opacité;
+          animation-name: opacité;
+  -webkit-animation-duration: 4s;
+          animation-duration: 4s;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+
+#section1 #m-item1 {
+  -webkit-animation-name: opacité;
+          animation-name: opacité;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 0;
+          animation-delay: 0;
+}
+
+#section1 #m-item2 {
+  -webkit-animation-name: opacité;
+          animation-name: opacité;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+}
+
+#section1 #m-item3 {
+  -webkit-animation-name: opacité;
+          animation-name: opacité;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+}
+
+#section2 {
+  -webkit-animation-name: opacité;
+          animation-name: opacité;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+
+#section2 #m-item1 {
+  -webkit-animation-name: opacité;
+          animation-name: opacité;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+
+#section2 #m-item2 {
+  -webkit-animation-name: opacité;
+          animation-name: opacité;
+  -webkit-animation-delay: 1s;
+          animation-delay: 1s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+}
+
+#section2 #m-item3 {
+  -webkit-animation-name: opacité;
+          animation-name: opacité;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+}
+
+#section3 {
+  -webkit-animation-name: opacité;
+          animation-name: opacité;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+
+#section3 #m-item1 {
+  -webkit-animation-name: opacité;
+          animation-name: opacité;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 0s;
+          animation-delay: 0s;
+}
+
+#section3 #m-item2 {
+  -webkit-animation-name: opacité;
+          animation-name: opacité;
+  -webkit-animation-duration: 3s;
+          animation-duration: 3s;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+
+#section3 #m-item3 {
+  -webkit-animation-name: opacité;
+          animation-name: opacité;
+  -webkit-animation-duration: 2s;
+          animation-duration: 2s;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
 }
 /*# sourceMappingURL=style.css.map */
