--- a/codes/style.scss
+++ b/codes/style.scss
@@ -1,3 +1,127 @@
+.monloader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  background: rgba(255, 255, 255, 0.603);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  animation: 2s 1 both masque;
+  animation: 4s 1 both a-index;
+}
+
+.circle-items {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100%;
+  height: 180px;
+  width: 180px;
+  margin: 0;
+  animation: 1s both color-logo;
+  background: #f6f6f600;
+}
+
+.circle-1 {
+  height: 100px;
+  width: 100px;
+  background: #fffdff;
+  border-top: 8px dashed #9356dc;
+  border-right: 8px solid #99e2d0;
+  border-bottom: 8px solid #99e2d0;
+  border-left: 8px solid #99e2d0;
+  animation: 2s 1 both masque;
+  box-shadow: 1px 1px 16px 0px #e37adb;
+  -webkit-box-shadow: 1px 1px 16px 0px #e37adb;
+  -moz-box-shadow: 1px 1px 16px 0px #e37adb;
+}
+.circle-2 {
+  height: 60%;
+  width: 60%;
+  border: 5px dashed #9356dc;
+  animation: 0.2s linear 9 both rotation-anim;
+  border-bottom: 2px dashed #06c59cdc;
+}
+.circle-3 {
+  display: flex;
+  height: 70%;
+  width: 70%;
+  border: 2px solid #99e2d0;
+  font-size: 25px;
+  color: #d8b30c;
+  animation: 2s 250 both rotation-anim-1;
+}
+
+#loader-utensils {
+  color: #9356dc;
+  border-radius: 100%;
+
+  animation: 2s 1 both a-index;
+}
+@keyframes couleurs {
+  from {
+    border-color: #99e2d0;
+  }
+  to {
+    border-color: #9356dc;
+  }
+}
+
+@keyframes masque {
+  0% {
+    opacity: 0.9;
+  }
+  80% {
+    opacity: 0.9;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes rotation-anim-1 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes rotation-anim-2 {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(-360deg);
+  }
+}
+@keyframes ustensils {
+  from {
+    font-size: 0px;
+  }
+  to {
+    font-size: 130px;
+  }
+}
+@keyframes color-logo {
+  from {
+    color: #99e2d0;
+  }
+  to {
+    color: #bf85d9;
+  }
+}
+@keyframes a-index {
+  from {
+    z-index: 1;
+  }
+  to {
+    z-index: -1;
+  }
+}
 * a {
   text-decoration: none;
   color: initial;
@@ -97,6 +221,7 @@ body {
     border-radius: 200px;
     font-size: 12px;
     margin: 0;
+    transition: 0.3s;
     padding: 0;
     box-shadow: 0px 5px 36px -7px rgba(0, 0, 0, 0.41);
     -webkit-box-shadow: 0px 5px 36px -7px rgba(0, 0, 0, 0.41);
@@ -115,7 +240,6 @@ body {
   -webkit-box-shadow: 0px 0px 4px 4px #e17bdc88;
   -moz-box-shadow: 0px 0px 4px 4px #e17bdc88;
   transform: scale(1.05);
-  transition: 0.1s;
 }
 /******process******/
 .section.process {
@@ -139,6 +263,7 @@ section.process h2 {
   width: 85%;
   border-radius: 12px;
   box-shadow: 0 5px 6px 2px #3a38381c;
+  transition: 0.9s;
   .btn {
     background: #9356dc;
     padding: 5px 10px;
@@ -251,9 +376,14 @@ section.process h2 {
   .far {
     height: 35px;
     width: 35px;
+    transition: 0.9s;
   }
   .fas {
     visibility: hidden;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    transition: 0.9s;
   }
 }
 .item1 {
@@ -280,7 +410,7 @@ section.process h2 {
   }
   .fas {
     visibility: visible;
-    transition-duration: 0.5s;
+    transition: 0.5s;
     background-image: linear-gradient(
       to top,
       #b387d6,
@@ -289,9 +419,6 @@ section.process h2 {
       #d97edc,
       #e779db
     );
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
   }
 }
 
@@ -319,22 +446,32 @@ footer {
   .footer_3,
   .footer_4 {
     width: 100%;
-    margin: 0 10px 10px 10px;
+    margin:  10px 0 ;
+    text-decoration: none;
+    list-style-type: none;
+  }
+   .mentions:hover {
+    text-decoration:underline 2px white;
+    
+  }
+  
   }
 
   .icon-text {
     display: flex;
     width: 80%;
     align-items: center;
-    color: white;
+    color: rgb(255, 255, 255);
     margin: 0 0 0 10px;
+    
+    .fa-utensils {
+      color: white;
+    }
     h4 {
       margin: 0 10px 0 10px;
     }
   }
-}
-.mentions,
-.contact {
+.mentions {
   color: white;
   margin: 0 0 0 10px;
   width: 100%;
@@ -382,6 +519,7 @@ footer {
   letter-spacing: 1px;
   border-radius: 35px 35px 0 0;
   font-style: normal;
+  transition:0.5s;
   .card-title {
     margin: 25px 0;
   }
@@ -419,15 +557,19 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  align-items: center;
   width: auto;
   margin: 0 10px;
   row-gap: 8px;
+  
   .title-underline {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 83%;
+    margin: 0;
     .entrees {
       margin: 10px 0 8px 10px;
+      width: auto;
     }
     .underline {
       height: 1px;
@@ -439,61 +581,130 @@ footer {
 }
 .items-menu {
   width: 80%;
+  animation: opacity 1s both;
 }
 .check-icon {
   display: flex;
-  font-size: 30px;
-  background: #99E2D0;
-  padding: 25px 25px 25px 25px;
-  border-radius: 0 15px 15px 0;
-  display: none;
-  animation: 1s linear 0.1s icon;
+  align-items: center;
+  width: 70px;
+  overflow: hidden;
+  justify-content: center;
+  height: 100%;
+  font-size: 29px;
 }
-@keyframes opacité {
+@keyframes opacity {
   from {
-   opacity:0;
+    opacity: 0;
   }
+
   to {
     opacity: 1;
   }
-  
 }
-.check-icon:hover {
-  display:inline-block;
 
-}
 .btn-text-case {
   @include btn-menu-flex;
-  width: 100%;
+  height: 70px;
   padding: 0 0 0 20px;
-  height: 100%;
-  border-radius: 15px;
+  transition: 0.3s;
+  
 
   .fa-check-circle {
     color: white;
   }
-  .name-menu > h3,
-  p {
+  .name-menu {
+    width: 70%;
     margin: 5px 0;
     font-size: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    
   }
+  .title-menu ,.long-name {
+    display:block;
+    width: 100%; 
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    
+
+  }
+
   .price-menu {
-    margin-bottom: 5px;
-    margin-right: 20px;
+    display: flex;
     font-weight: 700;
+    width: 100%;
+    padding-right: 12px;
+    justify-content: flex-end;
+    padding-bottom: 15px;
   }
 }
+.price-icon {
+  display: flex;
+padding-left: 2px;
+  align-items: flex-end;
+  height: 100%;
+}
+.contain-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 0px;
+  background: #99e2d0;
+  border: hidden;
+  border-radius: 0 16px 16px 0;
+  overflow: hidden;
+  transition: 0.5s;
+  margin-left: 20px;
+}
+.btn-text-case:hover {
+  transform: scale(1.1);
+  transition: 0.31s;
 
+  box-shadow: 0px 0px 3px 1px #99e2d088;
+  -webkit-box-shadow: 0px 0px 3px 1px #99e2d088;
+  -moz-box-shadow: 0px 0px 3px 1px #99e2d088;
+  .btn_text {
+    color: black;
+  }
+}
+.items-menu:hover {
+  .contain-icon {
+    animation: 0.3s 1 both widthlogo;
+    padding: 0 20px;
+  }
+  .fa-check-circle {
+    animation: 0.3s 1 both rotation-logo;
+  }
+}
+@keyframes rotation-logo {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes widthlogo {
+  from {
+    width: 0;
+  }
+  to {
+    width: 30px;
+  }
+}
 .search {
   @include flex-mid;
   max-height: 200px;
+  transition:0.5s;
 }
 .btn-search {
+  transition:0.5s;
   display: flex;
-  padding-left: 20px;
   justify-content: center;
   background: white;
-  width: 100%;
+  width: 200px;
   border-radius: 50px;
   box-shadow: 0px 10px 12px 5px rgba(220, 218, 218, 0.75);
   background-image: linear-gradient(
@@ -520,66 +731,125 @@ footer {
   background: url(/src/img-resto/LeDeliceDesSens.jpg) center;
   background-size: cover;
 }
-#section1 {
-  animation-name:opacité;
-  animation-duration: 4s;
-    animation-delay: 0s;
-    #m-item1 {
-      animation-name: opacité;
-      animation-duration: 3s;
-      animation-delay: 0;
-    }
-    #m-item2 {
-      animation-name: opacité;
-      animation-duration: 3s;
-      animation-delay: 1s;
-    }
-    #m-item3 {
-      animation-name: opacité;
-      animation-duration: 2s;
-      animation-delay: 3s;
-    }
-  }
-  #section2{
-    animation-name:opacité;
-  animation-duration: 3s;
-    animation-delay: 0s;
-    #m-item1 {
-      animation-name: opacité;
-      animation-iteration-count: 1;
-      animation-delay: 0s;
-    }
-    #m-item2 {
-      animation-name: opacité;
-      animation-delay: 1s;
-      animation-iteration-count: 1;
-    }
-    #m-item3 {
-      animation-name: opacité;
-      animation-duration: 2s;
-      animation-delay: 3s;
-      animation-iteration-count: 1;
-    }
-  }
-  #section3 {
-    animation-name:opacité;
-    animation-duration: 3s;
-      animation-delay: 0s;
-      #m-item1 {
-        animation-name: opacité;
-        animation-duration: 3s;
-        animation-delay: 0s;
-      }
-      #m-item2 {
-        animation-name: opacité;
-        animation-duration: 3s;
-        animation-delay: 2s;
-      }
-      #m-item3 {
-        animation-name: opacité;
-        animation-duration: 2s;
-        animation-delay: 3s;
-      }
-    }
 
+
+.m-item1 {
+  animation-delay: 0.3s;
+}
+.m-item2 {
+  animation-delay: 0.5s;
+}
+
+.m-item3 {
+  animation-delay: 0.8s;
+}
+.btn-search:hover {
+  transform: scale(1.2);
+  box-shadow: 0px 0px 3px 3px #e17bdc88;
+  -webkit-box-shadow: 0px 0px 3px 3px #e17bdc88;
+  -moz-box-shadow: 0px 0px 3px 3px #e17bdc88;
+}
+/**medias-query**/
+@media screen and (min-width: 960px) {
+  .card-text-case{
+    align-items: center;
+    justify-content: space-between;
+    margin:0 5% ;
+    transition:0.5s;
+    padding:0 5%;
+    border-radius: 250px 250px 0 0;
+    letter-spacing: 3px;
+  }
   
+  .process {
+    display: flex;
+    flex-direction: column;
+
+    width: auto;
+    margin: 0;
+  }
+  .process-bloc {
+    display: flex;
+    flex-direction: row;
+    width: auto;
+  }
+  .process-bloc-resto {
+    margin: 0 10px;
+  }
+  .btn_text {
+    width: auto;
+  }
+  .process-bloc-resto:hover {
+    background: #f5edff;
+    transform: scale(1.0153);
+    transition: 0.31s;
+    color: #9356dc;
+    box-shadow: 0px 0px 3px 2px #9256dc4b;
+    -webkit-box-shadow: 0px 0px 3px 2px #9256dc4b;
+    -moz-box-shadow: 0px 0px 3px 2px #9256dc4b;
+    .btn_text {
+      color: black;
+    }
+  }
+  .bloc-restaurant {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    width: 100%;
+  }
+  .card-menu {
+    display: grid;
+    grid-template-rows: 1fr;
+  }
+  .card-img-text {
+    align-items: center;
+  }
+  .sections-menu {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: flex-end;
+    height: 120px;
+  }
+  .items-menu {
+    width: 30%;
+  }
+
+  .search {
+    padding: 50px 0;
+  }
+  footer {
+  align-items: center;
+  font-size: 10px;
+  .h3 {
+    margin:30% 0;
+  }
+  .footer-list {
+    width:90%;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap:20px;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items:center;
+    
+  }
+  .icon-text {
+    width: auto;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin:0;
+    
+  }
+  
+  }
+  li{
+    display: flex;
+    flex-wrap: nowrap;
+    margin:0;
+    flex-direction: column;
+    align-items: stretch;
+    width: auto;
+  }
+  
+}
