--- a/style.scss
+++ b/style.scss
@@ -126,6 +126,9 @@
   text-decoration: none;
   color: initial;
 }
+a:hover {
+  cursor: pointer;
+}
 ul.footer {
   list-style-type: none;
 }
@@ -152,6 +155,7 @@ body {
   padding: 0;
   width: 100%;
   font-family: "roboto", sans-serif;
+  font-weight: 600;
 }
 .header {
   @include flex-mid;
@@ -286,6 +290,7 @@ section.process h2 {
   }
 }
 .process-bloc-resto:hover {
+  cursor: pointer;
   background: #f5edff;
   transform: scale(1.1);
   transition: 0.31s;
@@ -303,6 +308,10 @@ section.process h2 {
   background: #f6f6f6;
   margin-top: 50px;
   width: 100%;
+  border-radius:0.5rem ;
+  box-shadow: -4px 0px 7px 3px rgba(0,0,0,0.05);
+-webkit-box-shadow: -4px 0px 7px 3px rgba(0,0,0,0.05);
+-moz-box-shadow: -4px 0px 7px 3px rgba(0,0,0,0.05);
 }
 .restaurants h2 {
   margin-left: 20px;
@@ -322,6 +331,7 @@ section.process h2 {
   width: 90%;
   height: 90%;
   display: grid;
+  font-size: 10px;
   grid-template-columns: 1fr;
   grid-template-rows: 0.25fr 1fr 0.25fr;
   border-radius: 25px;
@@ -341,6 +351,7 @@ section.process h2 {
   padding: 0 10px;
   margin: 0 10px;
   align-items: center;
+  height:100%;
   .new {
     @include flex-mid;
     background: #99e2d0;
@@ -377,13 +388,14 @@ section.process h2 {
     height: 35px;
     width: 35px;
     transition: 0.9s;
+    opacity:1;
   }
   .fas {
-    visibility: hidden;
+    opacity:0;
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    transition: 0.9s;
+    transition: 1.9s;
   }
 }
 .item1 {
@@ -407,10 +419,12 @@ section.process h2 {
 .text-icon:hover {
   .far {
     display: none;
+    opacity:0;
+    transition: 1.9s;
   }
   .fas {
-    visibility: visible;
-    transition: 0.5s;
+    opacity:1;
+    transition: 1.9s;
     background-image: linear-gradient(
       to top,
       #b387d6,
@@ -428,6 +442,7 @@ footer {
   width: 100%;
   background: #353535;
   color: white;
+  font-size:20px;
   h3 {
     margin-left: 10px;
     font-family: "Shrikhand", cursive;
@@ -450,12 +465,17 @@ footer {
     text-decoration: none;
     list-style-type: none;
   }
+  
+  }
+  .mentions {
+    width:100%;
+  }
    .mentions:hover {
     text-decoration:underline 2px white;
     
   }
   
-  }
+  
 
   .icon-text {
     display: flex;
@@ -527,18 +547,21 @@ footer {
   .far,
   .fas {
     font-size: 27px;
+    transition:2.9s;
   }
   .fas {
     display: none;
+    opacity:0;
   }
   #icones-heart:hover {
     .far {
+      opacity:0;
       display: none;
     }
     .fas {
       display: block;
-      visibility: visible;
-      transition-duration: 0.5s;
+      opacity:1;
+      transition: 3.5s;
       background-image: linear-gradient(
         to top,
         #b387d6,
@@ -573,7 +596,7 @@ footer {
     }
     .underline {
       height: 1px;
-      background: rgb(9, 255, 0);
+      background: #99E2D0;
       width: 12%;
       margin: 0 0 5px 10px;
     }
@@ -613,7 +636,7 @@ footer {
     color: white;
   }
   .name-menu {
-    width: 70%;
+    width: 170%;
     margin: 5px 0;
     font-size: 10px;
     overflow: hidden;
@@ -622,7 +645,7 @@ footer {
   }
   .title-menu ,.long-name {
     display:block;
-    width: 100%; 
+    width: 80%; 
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -638,6 +661,9 @@ footer {
     justify-content: flex-end;
     padding-bottom: 15px;
   }
+}
+.long-name ,.text-food ,.mentions {
+  font-weight: 400;
 }
 .price-icon {
   display: flex;
@@ -720,15 +746,15 @@ padding-left: 2px;
   }
 }
 #note-E {
-  background: url(/src/img-resto/LaNoteEnchantée.jpg) center;
+  background: url(src/img-resto/LaNoteEnchantée.jpg) center;
   background-size: cover;
 }
-#francaise {
-  background: url(/src/img-resto/ALaFrancaise.jpg) center;
+.item3 {
+  background: url(src/img-resto/ALaFrancaise.jpg) center;
   background-size: cover;
 }
-#sens {
-  background: url(/src/img-resto/LeDeliceDesSens.jpg) center;
+.item4 {
+  background: url(src/img-resto/LeDeliceDesSens.jpg) center;
   background-size: cover;
 }
 
@@ -742,6 +768,27 @@ padding-left: 2px;
 
 .m-item3 {
   animation-delay: 0.8s;
+}
+.m-item4 {
+  animation-delay: 1.1s;
+}
+.m-item5 {
+  animation-delay: 1.4s;
+}
+.m-item6 {
+  animation-delay: 1.8s;
+}
+.m-item7 {
+  animation-delay: 2.1s;
+}
+.m-item8 {
+  animation-delay: 2.4s;
+}
+.m-item9 {
+  animation-delay: 2.8s;
+}
+.m-item10 {
+  animation-delay: 3.1s;
 }
 .btn-search:hover {
   transform: scale(1.2);
@@ -764,26 +811,38 @@ padding-left: 2px;
   .process {
     display: flex;
     flex-direction: column;
-
-    width: auto;
-    margin: 0;
+    width: 50%;
+    margin-top: 50px;
+    border-radius:0 0.5rem 0.5rem 0;
+    height:100%
+    
   }
   .process-bloc {
     display: flex;
-    flex-direction: row;
-    width: auto;
+    row-gap: 5px;
+    width: 100%;
   }
   .process-bloc-resto {
-    margin: 0 10px;
+    margin: 20px 10px;
   }
   .btn_text {
     width: auto;
+  }
+  .process-restaurants{
+    display:flex;
+    width: 100%;
+    height:100%;
+    
+    column-gap: 5px;
+    align-items: flex-start;
+    
   }
   .process-bloc-resto:hover {
     background: #f5edff;
     transform: scale(1.0153);
     transition: 0.31s;
     color: #9356dc;
+    
     box-shadow: 0px 0px 3px 2px #9256dc4b;
     -webkit-box-shadow: 0px 0px 3px 2px #9256dc4b;
     -moz-box-shadow: 0px 0px 3px 2px #9256dc4b;
@@ -794,8 +853,11 @@ padding-left: 2px;
   .bloc-restaurant {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
+    grid-template-rows: 1fr 1fr 0.2fr;
     width: 100%;
+    height:100%;
+    transition:1.3s;
+    
   }
   .card-menu {
     display: grid;
@@ -809,7 +871,7 @@ padding-left: 2px;
     flex-direction: row;
     flex-wrap: wrap;
     align-content: flex-end;
-    height: 120px;
+    
   }
   .items-menu {
     width: 30%;
@@ -820,15 +882,15 @@ padding-left: 2px;
   }
   footer {
   align-items: center;
-  font-size: 10px;
+  font-size: 15px;
   .h3 {
     margin:30% 0;
   }
   .footer-list {
-    width:90%;
+    width:auto;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap:20px;
+    column-gap:25px;
     flex-direction: row;
     flex-wrap: nowrap;
     align-items:center;
