--- a/style.css
+++ b/style.css
@@ -263,8 +263,8 @@ body {
   height: 80px;
   font-family: "Shrikhand", cursive;
   width: 100%;
-  -webkit-box-shadow: 0 0 20 8 20 #d3d3d3;
-          box-shadow: 0 0 20 8 20 #d3d3d3;
+  -webkit-box-shadow: 0px 0px 20px 8px 20px #d3d3d3;
+          box-shadow: 0px 0px 20px 8px 20px #d3d3d3;
 }
 
 .head-logo-P {
@@ -644,7 +644,7 @@ section.process h2 {
 }
 
 .item1 {
-  background: url(/src/img-resto/LaPaletteDuGout.jpg) center;
+  background: url(src/img-resto/LaPaletteDuGout.jpg) center;
   background-size: cover;
   border-radius: 25px;
   -o-object-fit: cover;
@@ -652,17 +652,17 @@ section.process h2 {
 }
 
 .item2 {
-  background: url(/src/img-resto/LaNoteEnchantée.jpg) center;
+  background: url(src/img-resto/LaNoteEnchantée.jpg) center;
   background-size: cover;
 }
 
 .item3 {
-  background: url(/src/img-resto/ALaFrancaise.jpg) center;
+  background: url(src/img-resto/ALaFrancaise.jpg) center;
   background-size: cover;
 }
 
 .item4 {
-  background: url(/src/img-resto/LeDeliceDesSens.jpg) center;
+  background: url(src/img-resto/LeDeliceDesSens.jpg) center;
   background-size: cover;
 }
 
